--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <h2>Prajwal A U</h2>
             <h3>Software Developer</h3>
             <p>
-              As a backend developer with over 2 years of experience, I
+              As a backend developer with over 3 years of experience, I
               specialize in building efficient APIs and backend systems using
               Node.js and NestJS. My passion lies in creating reliable solutions
               for authentication, authorization, and database integration. I
@@ -199,6 +199,7 @@
                   </li>
                 </ul>
                 <ul class="experience-item-content-skills">
+                  <li>Nest JS</li>
                   <li>Jira</li>
                   <li>Microsoft Teams</li>
                   <li>Documentation</li>
@@ -245,10 +246,10 @@
                   </li>
                 </ul>
                 <ul class="experience-item-content-skills">
-                  <li>Java</li>
-                  <li>JavaScript</li>
                   <li>Node JS</li>
+                  <li>JavaScript</li>
                   <li>Mongo DB</li>
+                  <li>Java</li>
                   <li>Git</li>
                 </ul>
               </div>
